<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:paddingTop="120dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="40dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_select_type"
            android:textSize="18sp"/>

        <Spinner
            android:id="@+id/spinnerActivityType"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="8dp"/>

        <TextView
            android:id="@+id/tvDurationLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_duration_default"
            android:layout_marginTop="24dp"
            android:textSize="18sp"/>

        <SeekBar
            android:id="@+id/sbDuration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:max="180"
            android:progress="30" />

        <Button
            android:id="@+id/btnFetchImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_fetch_image"
            android:layout_marginTop="24dp"/>

        <ImageView
            android:id="@+id/ivPreview"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:scaleType="centerCrop"
            android:layout_marginTop="12dp"
            android:background="@android:color/white"
            android:contentDescription="@string/img_desc_preview"/>

        <Button
            android:id="@+id/btnSave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_save"
            android:layout_marginTop="32dp"
            android:backgroundTint="@android:color/holo_green_dark"/>

    </LinearLayout>
</ScrollView>
