<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:paddingTop="120dp"
    android:layout_marginTop="40dp">

    <TextView
        android:id="@+id/tvStepCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/step_count_default"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/tvRecentLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/recent_label"
        android:textSize="20sp"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@id/tvStepCount"
        app:layout_constraintStart_toStartOf="parent"/>

    <ListView
        android:id="@+id/listViewWorkouts"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintTop_toBottomOf="@id/tvRecentLabel"
        app:layout_constraintBottom_toTopOf="@id/btnAddActivity"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/btnAddActivity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_add_activity"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>
